--- a/style.css
+++ b/style.css
@@ -6,10 +6,11 @@ p {
 
 nav {
   font-family: helvetica;
-  text-align: center;
+  text-align: center; inline;
   background-color: gray;
   color: white;
   width: 100%;
+  
 }
 
 h1 {
