--- a/style.css
+++ b/style.css
@@ -1,26 +1,64 @@
-p {
-  color: red;
+.jumbotron {
+  background-color: #88B3CA;
   font-family: helvetica;
-  text-align: center;
 }
 
-nav {
-  font-family: helvetica;
-  text-align: center;
-  background-color: gray;
-  color: white;
-  width: 100%;
-  padding: 48px;
-  border-color: black;
-  border: 15px;
-  border-style: solid;
+li {
+  font-family: helvetica, sans-serif;
+  font-size: 18px;
+}
+
+h3 {
+  font-size: 30px;
+}
+
+#container-contact{
+  padding-bottom: 25px;
   
 }
 
-h1 {
-  text-align: center;
-  font-family: helvetica;
-  font-size: 60px;
-  background-color: pink;
-  width: 100%;
+#container-technical {
+  padding: 15px;
+  
+}
+
+#container-work {
+  padding: 20px;
+  margin-top: 20px;
+  font-family: helvetica; sans-serif;
+  border-style: solid;
+  border-color: #DDDDDE;
+  border-radius: 3%;
+  background-color: #DDDDDE;
+  
+}
+
+#content-RedBalloon {
+  margin-top: 25px;
+}
+
+#content-midwest {
+  margin-top: 30px;
+}
+
+#content-braun1 {
+  margin-top: 30px;
+}
+
+#content-braun2 {
+  margin-top: 30px;
+}
+
+#content-braun3 {
+  margin-top: 30px;
+}
+
+#content-patio {
+  margin-top: 30px;
+  margin-bottom: 25px;
+}
+
+.content-education {
+  margin-top: 25px;
+  margin-bottom: 30px;
 }
