--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ h3 {
   margin-bottom: 25px;
 }
 
-.content-education {
+#content-education {
   margin-top: 25px;
   margin-bottom: 30px;
   font-family: helvetica;
