--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ h3 {
 #container-work {
   padding: 20px;
   margin-top: 20px;
+  margin-right: 10px;
   font-family: helvetica; sans-serif;
   border-style: solid;
   border-color: #DDDDDE;
