--- a/style.css
+++ b/style.css
@@ -38,7 +38,8 @@ h3 {
 #container-work {
   padding: 20px;
   margin-top: 20px;
-  margin-right: 10px;
+  margin-right: 25px;
+  margin-left: 25px;
   font-family: helvetica; sans-serif;
   border-style: solid;
   border-color: #DDDDDE;
