--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ h3 {
 #content-education {
   margin-top: 25px;
   margin-bottom: 30px;
+  padding: 15px;
   font-family: helvetica;
   line-height: 1;
 }
