--- a/style.css
+++ b/style.css
@@ -39,6 +39,8 @@ h3 {
   font-family: helvetica;
   margin-bottom: 150px;
   margin-left: 100px;
+  background-color: #DDDDDE;
+  background-position: center;
   
 }
 
