--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
 header {
   background-color: #88B3CA;
   font-family: helvetica;
-  text-align: center;
+  float: center;
   padding: 30px;
-  box-shadow: 1px 2px 2px #000
 }
 
 
