--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 header {
   background-color: #88B3CA;
-  font-family: helvetica;
+  font-family: Helvetica;
   float: top;
   padding: 30px;
+  text-align: center;
 }
 
 
