--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ h3 {
 
 #container-work {
   padding: 20px;
-  margin-top: 10px;
+  margin-top: 20px;
   margin-right: 100px;
   margin-left: 100px;
   font-family: helvetica; sans-serif;
@@ -48,6 +48,7 @@ h3 {
   border-radius: 3%;
   background-color: #DDDDDE;
   box-shadow: 1px 2px 2px #000;
+  width: 600px;
   
 }
 
