--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ h3 {
 #container-work {
   padding: 20px;
   margin-top: 20px;
-  margin-right: 100px;
+  margin-right: 50px;
   margin-left: 100px;
   font-family: helvetica; sans-serif;
   border-style: solid;
@@ -49,6 +49,7 @@ h3 {
   background-color: #DDDDDE;
   box-shadow: 1px 2px 2px #000;
   width: 600px;
+  float: right;
   
 }
 
