--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ h3 {
   margin-top: 20px;
   margin-right: 50px;
   margin-left: 100px;
+  margin-bottom: 20px;
   font-family: helvetica; sans-serif;
   border-style: solid;
   border-color: #DDDDDE;
