--- a/style.css
+++ b/style.css
@@ -54,8 +54,8 @@ h3 {
   border-radius: 3%;
   background-color: #DDDDDE;
   box-shadow: 1px 2px 2px #000;
-  width: 800px;
-  float: top right;
+  width: 700px;
+  float: right;
   
 }
 
