--- a/style.css
+++ b/style.css
@@ -60,8 +60,8 @@ h3 {
   border-radius: 3%;
   background-color: #DDDDDE;
   box-shadow: 1px 2px 2px #000;
-  width: 700px;
   float: right;
+  max-width: auto;
   
 }
 
