--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ h3 {
   background-color: #DDDDDE;
   box-shadow: 1px 2px 2px #000;
   float: right;
-  max-width: auto;
+  max-width: 700px;
   
 }
 
