--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ h3 {
   float: right;
   max-width: 700px;
   min-width: 700px;
-  position: fixed;
+  position: absolute;
 }
 
 #content-RedBalloon {
