--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ h3 {
   background-color: #DDDDDE;
   box-shadow: 1px 2px 2px #000;
   float: right;
-  min-width: 700px;
+  width: 700px;
 }
 
 #content-RedBalloon {
